--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-discord.py[voice]>=2.3.0
+py-cord>=2.4.0
 yfinance>=0.2.0
 pandas>=2.0.0
 numpy>=1.24.0
@@ -9,3 +9,4 @@ deep-translator>=1.11.0
 scipy>=1.10.0
 python-dotenv>=1.0.0
 Flask>=3.0.0
+aiohttp>=3.9.0
